--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -27,6 +27,9 @@
 .App-link {
   color: #61dafb;
 }
+.container {
+  overflow: auto;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +38,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.add_btn {
+  text-align: right;
 }
