--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -44,8 +44,25 @@
   text-align: right;
 }
 
-.left_view{
+.left_view h3{
   font-size: 21px;
 
+}
+
+.left_view p{
+  font-weight: 600;
+
+}
+.left_view span{
+  font-weight: 400;
+
+}
+
+.right_view p {
+  font-weight: 600;
+}
+
+.right_view span {
+  font-weight: 400;
 }
 
